# rosy

./: .gitmodules  CMakeLists.txt  README.md  boot.cpp  module.h  property.h  rc.cpp  rosy.h
examples/: camera.cpp  camera.h  core.glsl  fractal.glsl  main.cpp  main.glsl  transform.h
modules/audio/: audio.cpp  audio.h
modules/event/: event.h
modules/graphics/: graphics.cpp  graphics.h  shader.h
modules/input/: input.h
modules/resources/: resources.h
modules/timer/: timer.cpp  timer.h
modules/window/: window.cpp  window.h
src/: Arc.hpp  Box.hpp  boot.cpp  property.h  rc.cpp  rosy.h  rosy.hpp
src/modules/audio/: audio.cpp  audio.h  audio.hpp
src/modules/event/: event.h  event.hpp
src/modules/graphics/: graphics.cpp  graphics.h  graphics.hpp  shader.h  shader.hpp
src/modules/input/: input.cpp  input.h  input.hpp
src/modules/resources/: resources.cpp  resources.h
src/modules/timer/: timer.cpp  timer.h  timer.hpp
src/modules/window/: window.cpp  window.h  window.hpp
